# federated-beads

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DOLT_REMOTE.md  Makefile  README.md  manifest
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.beads/formulas/: fbd-slice.formula.toml
plans/: build-report.md  fbd-v1-implementation-plan.md
plans/slices/: slice-0.md  slice-1.md  slice-10.md  slice-11.md  slice-12.md  slice-2.md  slice-3.md  slice-4.md  slice-5.md  slice-6.md  slice-7.md  slice-8.md  slice-9.md  slice-9b.md
src/: cache.rs  cli.rs  config.rs  hub.rs  lib.rs  main.rs  refresh.rs  runtime.rs  snapshot.rs
src/app/: context.rs  keys.rs  mod.rs  view.rs
src/bd/: cli.rs  fake.rs  mod.rs  types.rs
tests/: bd_integration.rs
tests/fixtures/: ready.json  search.json  show.json  version.json
tests/helpers/: mod.rs
