[package]
name = "fbd"
version = "0.1.0"
edition = "2024"
description = "Federated Beads: a read-only terminal UI over a bd multi-repo hub — one cross-repo ready-work list, detail pane, search, and copy-context."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/brian-bell/federated-beads"
keywords = ["tui", "beads", "issue-tracker", "ratatui", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
fs2 = "0.4.3"
# `unstable-rendered-line-info` exposes `Paragraph::line_count`, used to clamp the
# detail pane's scroll to its wrapped height so long content stays reachable
# without scrolling into blank space. Pinned via Cargo.lock; API is stable within
# 0.30.x.
ratatui = { version = "0.30.2", features = ["unstable-rendered-line-info"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.27.0"
